@@ -9,6 +9,8 @@
 
   Change AKS to the latest standard implementation (v6 of the paper).
 
+  Rewrite big parts of BigPolynomial.
+
 =head2 0.08
 
   Use a small GCD in the prime_count loop, making it much faster.
